// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Assessment Converter oboToSlate converts an OboComponent to a Slate node 1`] = `
Object {
  "data": Object {
    "content": Object {
      "failedResult": 0,
      "failedType": "set-value",
      "mods": Array [
        Object {
          "attemptCondition": 1,
          "reward": 10,
        },
      ],
      "passedResult": 100,
      "passedType": "set-value",
      "passingAttemptScore": 0,
      "unableToPassResult": 0,
      "unableToPassType": "set-value",
    },
  },
  "isVoid": true,
  "object": "block",
  "type": "ObojoboDraft.Sections.Assessment.Rubric",
}
`;

exports[`Assessment Converter oboToSlate converts an OboComponent to a Slate node without mods 1`] = `
Object {
  "data": Object {
    "content": Object {
      "failedResult": 0,
      "failedType": "set-value",
      "passedResult": 100,
      "passedType": "set-value",
      "passingAttemptScore": 0,
      "unableToPassResult": 0,
      "unableToPassType": "set-value",
    },
  },
  "isVoid": true,
  "object": "block",
  "type": "ObojoboDraft.Sections.Assessment.Rubric",
}
`;
